update cringe HTML desc

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,14 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Perlin noise go brrrr" />
+    <meta
+      name="description"
+      content="Layered Random Noise Terrain Generator, implmented in React Three Fiber."
+    />
+    <meta
+      name="keywords"
+      content="three, three.js, react, react-three-fiber, terrain, generator"
+    />
     <title>Terrain Generator</title>
   </head>
   <body>
